# MCP-intro

./: .env.sample  README.md  conf.py  mcp_config.sample.json  pyproject.toml
00-intro/: conf.py  demo.py  index.html
01-memory/: demo.py  execu_api_with_curl.sh  index.html  main.py  readme.md
02-func/: index.html  main.py  weather.py
02-func-optimize/: index.html  main.py
03-mcp/: index.html  main.py  mcp_config.json  mcp_manager.py  ops.py
demos/: 00-chat.py  01-chat.py  02-tool_calls.py
desktop/00-intro/: backend.py  demo.py  desktop.py  main.py  readme.md
mcp_servers/: weather_mcp_server.py
